--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic-Tac-Toe Game</title>
-  <link rel="stylesheet" href="/CSS/game.css">
+  <link rel="stylesheet" href="game.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
       <p id="statusText"></p>
     </div>
   </div>
-  <script src="/JS/game.js"></script>
+  <script src="game.js"></script>
 </body>
 
 </html>
